2019-11-14 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: add method to create tasks
 * piccolo3/client/Piccolo.py: use method to create tasks
 * piccolo3/client/PiccoloDataDir.py: ditto
 * piccolo3/client/PiccoloScheduler.py: ditto
 * piccolo3/client/PiccoloSpectrometer.py: ditto

2019-11-12 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: add property to check whether client
   is connected

2019-11-08 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: when getting protocol to talk to
   piccolo server test connection, retry until it works

2019-08-02 Magnus Hagdorn
 * piccolo3/client/PiccoloScheduler.py: add functionality to
   suspend/unsuspend/delete jobs

2019-08-02 Magnus Hagdorn
 * piccolo3/client/PiccoloScheduler.py: add functionality to get list of jobs

2019-07-30 Magnus Hagdorn
 * piccolo3/client/__init__.py: setup piccolo scheduler
 * piccolo3/client/PiccoloScheduler.py: add new module to handle piccolo
   scheduler

2019-05-17 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: observe spectrometer status

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: pass target saturation as argument

2019-04-24 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add methods to handle numSequences,
   autointegration, delay and target settings; make all arguments to
   record_sequence and record_dark optional
 * piccolo3/client/PiccoloDataDir.py: handle updates to current_run

2019-04-23 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to abort acquisition

2019-04-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to pause server

2019-04-22 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add extra keyword arguments to schedule a
   sequence run
 * setup.py: install new script
 * piccolo3/precord.py: add script to run piccolo sequences from the command
   line

2019-04-17 Magnus Hagdorn
 * piccolo3/client/Piccolo.py: add method to start autointegration
 * piccolo3/client/PiccoloSpectrometer.py: add methods to handle